# pyrite64

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  Readme.md
.github/ISSUE_TEMPLATE/: feature-request---suggestion.md
.github/workflows/: docs.yml  editor.yml
data/scripts/: defaultGlobal.cpp  defaultObject.cpp
data/shader/: defines.glsl  main3d.frag.glsl  main3d.frag.spv  main3d.vert.glsl  main3d.vert.spv  n64.frag.glsl  n64.frag.spv  n64.vert.glsl  n64.vert.spv  ubo.glsl  utils.glsl
docs/: .gitignore  README.md  build_and_serve.sh  build_editor.md  cli_editor.md  conf.py  faq.md  index.rst  requirements.txt  setup_editor.md  usage_editor.md
docs/_static/: custom.css
docs/docs/: dev.rst  faq.rst  manual.rst
docs/docs/dev/: build.rst
docs/docs/manual/: cli.md  install.rst  introduction.rst  launcher.rst
n64/: CMakeLists.txt
n64/engine/: Makefile
n64/engine/src/: main.cpp
n64/examples/empty/: .gitignore
n64/examples/hello_world/: project.json
n64/examples/jam25/: .gitignore
src/: cli.cpp  context.h  main.cpp
src/editor/: actions.cpp  actions.h  editorScene.cpp  editorScene.h  globalActions.cpp  keymap.cpp  keymap.h  preferences.cpp  preferences.h  undoRedo.cpp  undoRedo.h  window.cpp  window.h
src/project/: assetManager.cpp  assetManager.h  project.cpp
src/renderer/: camera.cpp  n64Mesh.cpp  n64Mesh.h  scene.cpp  shader.cpp  uniforms.h  vertex.h
src/utils/: binaryFile.h  codeParser.cpp  fs.h  hash.h  jsonBuilder.h  meshGen.cpp  meshGen.h  proc.cpp  proc.h  prop.h  string.h  toolchain.cpp  toolchain.h
src/utils/mesh/: gltf.cpp  (+1 more)
(+93 files in other folders)
